💄 Enable to set max count for frequently used emoji

--- a/setting/options.html
+++ b/setting/options.html
@@ -4,6 +4,20 @@
     <title>Chatwork Tools Extension Options</title>
   </head>
   <body>
+    <h2>Frequently Used Emoji Count</h2>
+    <select id="emoji_count">
+      <option value="0">0</option>
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
+    </select>
     <h2>Custom Emoji</h2>
     <table>
       <thead>
