💄 Enable to insert text of multi lines for custom emoji

--- a/setting/options.html
+++ b/setting/options.html
@@ -30,28 +30,28 @@
       <tbody>
         <tr>
           <th scope="row">1</th>
-          <td><input type="text" id="icon_1" /></td>
-          <td><input type="text" id="text_1" /></td>
+          <td><input type="text" id="icon_1" size="4" /></td>
+          <td><textarea id="text_1" rows="1" cols="50"></textarea></td>
         </tr>
         <tr>
           <th scope="row">2</th>
-          <td><input type="text" id="icon_2" /></td>
-          <td><input type="text" id="text_2" /></td>
+          <td><input type="text" id="icon_2" size="3" /></td>
+          <td><textarea id="text_2" rows="1" cols="50"></textarea></td>
         </tr>
         <tr>
           <th scope="row">3</th>
-          <td><input type="text" id="icon_3" /></td>
-          <td><input type="text" id="text_3" /></td>
+          <td><input type="text" id="icon_3" size="3" /></td>
+          <td><textarea id="text_3" rows="1" cols="50"></textarea></td>
         </tr>
         <tr>
           <th scope="row">4</th>
-          <td><input type="text" id="icon_4" /></td>
-          <td><input type="text" id="text_4" /></td>
+          <td><input type="text" id="icon_4" size="3" /></td>
+          <td><textarea id="text_4" rows="1" cols="50"></textarea></td>
         </tr>
         <tr>
           <th scope="row">5</th>
-          <td><input type="text" id="icon_5" /></td>
-          <td><input type="text" id="text_5" /></td>
+          <td><input type="text" id="icon_5" size="3" /></td>
+          <td><textarea id="text_5" rows="1" cols="50"></textarea></td>
         </tr>
       </tbody>
     </table>
