✨ Enable to set custom message to each room

--- a/setting/options.html
+++ b/setting/options.html
@@ -18,74 +18,154 @@
       <option value="9">9</option>
       <option value="10">10</option>
     </select>
-    <h2>Custom Emoji for Chat Area</h2>
+    <h2>Custom Message for Chat Area</h2>
     <table>
       <thead>
         <tr>
           <th scope="col"></th>
           <th scope="col">icon</th>
           <th scope="col">text</th>
+          <th scope="col">room id</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <th scope="row">1</th>
-          <td><input type="text" id="icon_1" size="3" /></td>
-          <td><textarea id="text_1" rows="1" cols="50"></textarea></td>
+          <td><input type="text" id="chat_icon_1" size="3" /></td>
+          <td><textarea id="chat_message_1" rows="1" cols="30"></textarea></td>
+          <td><textarea id="chat_room_id_1" rows="1" cols="10"></textarea></td>
         </tr>
         <tr>
           <th scope="row">2</th>
-          <td><input type="text" id="icon_2" size="3" /></td>
-          <td><textarea id="text_2" rows="1" cols="50"></textarea></td>
+          <td><input type="text" id="chat_icon_2" size="3" /></td>
+          <td><textarea id="chat_message_2" rows="1" cols="30"></textarea></td>
+          <td><textarea id="chat_room_id_2" rows="1" cols="10"></textarea></td>
         </tr>
         <tr>
           <th scope="row">3</th>
-          <td><input type="text" id="icon_3" size="3" /></td>
-          <td><textarea id="text_3" rows="1" cols="50"></textarea></td>
+          <td><input type="text" id="chat_icon_3" size="3" /></td>
+          <td><textarea id="chat_message_3" rows="1" cols="30"></textarea></td>
+          <td><textarea id="chat_room_id_3" rows="1" cols="10"></textarea></td>
         </tr>
         <tr>
           <th scope="row">4</th>
-          <td><input type="text" id="icon_4" size="3" /></td>
-          <td><textarea id="text_4" rows="1" cols="50"></textarea></td>
+          <td><input type="text" id="chat_icon_4" size="3" /></td>
+          <td><textarea id="chat_message_4" rows="1" cols="30"></textarea></td>
+          <td><textarea id="chat_room_id_4" rows="1" cols="10"></textarea></td>
         </tr>
         <tr>
           <th scope="row">5</th>
-          <td><input type="text" id="icon_5" size="3" /></td>
-          <td><textarea id="text_5" rows="1" cols="50"></textarea></td>
+          <td><input type="text" id="chat_icon_5" size="3" /></td>
+          <td><textarea id="chat_message_5" rows="1" cols="30"></textarea></td>
+          <td><textarea id="chat_room_id_5" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">6</th>
+          <td><input type="text" id="chat_icon_6" size="3" /></td>
+          <td><textarea id="chat_message_6" rows="1" cols="30"></textarea></td>
+          <td><textarea id="chat_room_id_6" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">7</th>
+          <td><input type="text" id="chat_icon_7" size="3" /></td>
+          <td><textarea id="chat_message_7" rows="1" cols="30"></textarea></td>
+          <td><textarea id="chat_room_id_7" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">8</th>
+          <td><input type="text" id="chat_icon_8" size="3" /></td>
+          <td><textarea id="chat_message_8" rows="1" cols="30"></textarea></td>
+          <td><textarea id="chat_room_id_8" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">9</th>
+          <td><input type="text" id="chat_icon_9" size="3" /></td>
+          <td><textarea id="chat_message_9" rows="1" cols="30"></textarea></td>
+          <td><textarea id="chat_room_id_9" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">10</th>
+          <td><input type="text" id="chat_icon_10" size="3" /></td>
+          <td><textarea id="chat_message_10" rows="1" cols="30"></textarea></td>
+          <td><textarea id="chat_room_id_10" rows="1" cols="10"></textarea></td>
         </tr>
       </tbody>
     </table>
-    <h2>Custom Emoji for Task Area</h2>
+    <h2>Custom Message for Task Area</h2>
     <table>
       <thead>
         <tr>
           <th scope="col"></th>
           <th scope="col">icon</th>
           <th scope="col">text</th>
+          <th scope="col">room id</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <th scope="row">1</th>
           <td><input type="text" id="task_icon_1" size="3" /></td>
-          <td><textarea id="task_text_1" rows="1" cols="50"></textarea></td>
+          <td><textarea id="task_message_1" rows="1" cols="30"></textarea></td>
+          <td><textarea id="task_room_id_1" rows="1" cols="10"></textarea></td>
         </tr>
         <tr>
           <th scope="row">2</th>
           <td><input type="text" id="task_icon_2" size="3" /></td>
-          <td><textarea id="task_text_2" rows="1" cols="50"></textarea></td>
+          <td><textarea id="task_message_2" rows="1" cols="30"></textarea></td>
+          <td><textarea id="task_room_id_2" rows="1" cols="10"></textarea></td>
         </tr>
         <tr>
           <th scope="row">3</th>
           <td><input type="text" id="task_icon_3" size="3" /></td>
-          <td><textarea id="task_text_3" rows="1" cols="50"></textarea></td>
+          <td><textarea id="task_message_3" rows="1" cols="30"></textarea></td>
+          <td><textarea id="task_room_id_3" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td><input type="text" id="task_icon_4" size="3" /></td>
+          <td><textarea id="task_message_4" rows="1" cols="30"></textarea></td>
+          <td><textarea id="task_room_id_4" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td><input type="text" id="task_icon_5" size="3" /></td>
+          <td><textarea id="task_message_5" rows="1" cols="30"></textarea></td>
+          <td><textarea id="task_room_id_5" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">6</th>
+          <td><input type="text" id="task_icon_6" size="3" /></td>
+          <td><textarea id="task_message_6" rows="1" cols="30"></textarea></td>
+          <td><textarea id="task_room_id_6" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">7</th>
+          <td><input type="text" id="task_icon_7" size="3" /></td>
+          <td><textarea id="task_message_7" rows="1" cols="30"></textarea></td>
+          <td><textarea id="task_room_id_7" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">8</th>
+          <td><input type="text" id="task_icon_8" size="3" /></td>
+          <td><textarea id="task_message_8" rows="1" cols="30"></textarea></td>
+          <td><textarea id="task_room_id_8" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">9</th>
+          <td><input type="text" id="task_icon_9" size="3" /></td>
+          <td><textarea id="task_message_9" rows="1" cols="30"></textarea></td>
+          <td><textarea id="task_room_id_9" rows="1" cols="10"></textarea></td>
+        </tr>
+        <tr>
+          <th scope="row">10</th>
+          <td><input type="text" id="task_icon_10" size="3" /></td>
+          <td><textarea id="task_message_10" rows="1" cols="30"></textarea></td>
+          <td><textarea id="task_room_id_10" rows="1" cols="10"></textarea></td>
         </tr>
       </tbody>
     </table>
-
     <div id="status"></div>
     <button id="save">Save</button>
-
     <script src="options.js"></script>
   </body>
 </html>
