✨ Enable to add task to registered accounts

--- a/setting/options.html
+++ b/setting/options.html
@@ -18,149 +18,273 @@
       <option value="9">9</option>
       <option value="10">10</option>
     </select>
-    <h2>Custom Message for Chat Area</h2>
+    <h2>Custom Message for Chat</h2>
     <table>
       <thead>
         <tr>
           <th scope="col"></th>
-          <th scope="col">icon</th>
-          <th scope="col">text</th>
-          <th scope="col">room id</th>
+          <th scope="col">Icon</th>
+          <th scope="col">Message</th>
+          <th scope="col">Room ID</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <th scope="row">1</th>
           <td><input type="text" id="chat_icon_1" size="5" /></td>
-          <td><textarea id="chat_message_1" rows="1" cols="50"></textarea></td>
-          <td><textarea id="chat_room_id_1" rows="1" cols="10"></textarea></td>
+          <td><textarea id="chat_message_1" rows="2" cols="50"></textarea></td>
+          <td><textarea id="chat_room_id_1" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">2</th>
           <td><input type="text" id="chat_icon_2" size="5" /></td>
-          <td><textarea id="chat_message_2" rows="1" cols="50"></textarea></td>
-          <td><textarea id="chat_room_id_2" rows="1" cols="10"></textarea></td>
+          <td><textarea id="chat_message_2" rows="2" cols="50"></textarea></td>
+          <td><textarea id="chat_room_id_2" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">3</th>
           <td><input type="text" id="chat_icon_3" size="5" /></td>
-          <td><textarea id="chat_message_3" rows="1" cols="50"></textarea></td>
-          <td><textarea id="chat_room_id_3" rows="1" cols="10"></textarea></td>
+          <td><textarea id="chat_message_3" rows="2" cols="50"></textarea></td>
+          <td><textarea id="chat_room_id_3" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">4</th>
           <td><input type="text" id="chat_icon_4" size="5" /></td>
-          <td><textarea id="chat_message_4" rows="1" cols="50"></textarea></td>
-          <td><textarea id="chat_room_id_4" rows="1" cols="10"></textarea></td>
+          <td><textarea id="chat_message_4" rows="2" cols="50"></textarea></td>
+          <td><textarea id="chat_room_id_4" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">5</th>
           <td><input type="text" id="chat_icon_5" size="5" /></td>
-          <td><textarea id="chat_message_5" rows="1" cols="50"></textarea></td>
-          <td><textarea id="chat_room_id_5" rows="1" cols="10"></textarea></td>
+          <td><textarea id="chat_message_5" rows="2" cols="50"></textarea></td>
+          <td><textarea id="chat_room_id_5" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">6</th>
           <td><input type="text" id="chat_icon_6" size="5" /></td>
-          <td><textarea id="chat_message_6" rows="1" cols="50"></textarea></td>
-          <td><textarea id="chat_room_id_6" rows="1" cols="10"></textarea></td>
+          <td><textarea id="chat_message_6" rows="2" cols="50"></textarea></td>
+          <td><textarea id="chat_room_id_6" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">7</th>
           <td><input type="text" id="chat_icon_7" size="5" /></td>
-          <td><textarea id="chat_message_7" rows="1" cols="50"></textarea></td>
-          <td><textarea id="chat_room_id_7" rows="1" cols="10"></textarea></td>
+          <td><textarea id="chat_message_7" rows="2" cols="50"></textarea></td>
+          <td><textarea id="chat_room_id_7" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">8</th>
           <td><input type="text" id="chat_icon_8" size="5" /></td>
-          <td><textarea id="chat_message_8" rows="1" cols="50"></textarea></td>
-          <td><textarea id="chat_room_id_8" rows="1" cols="10"></textarea></td>
+          <td><textarea id="chat_message_8" rows="2" cols="50"></textarea></td>
+          <td><textarea id="chat_room_id_8" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">9</th>
           <td><input type="text" id="chat_icon_9" size="5" /></td>
-          <td><textarea id="chat_message_9" rows="1" cols="50"></textarea></td>
-          <td><textarea id="chat_room_id_9" rows="1" cols="10"></textarea></td>
+          <td><textarea id="chat_message_9" rows="2" cols="50"></textarea></td>
+          <td><textarea id="chat_room_id_9" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">10</th>
           <td><input type="text" id="chat_icon_10" size="5" /></td>
-          <td><textarea id="chat_message_10" rows="1" cols="50"></textarea></td>
-          <td><textarea id="chat_room_id_10" rows="1" cols="10"></textarea></td>
+          <td><textarea id="chat_message_10" rows="2" cols="50"></textarea></td>
+          <td><textarea id="chat_room_id_10" rows="2" cols="12"></textarea></td>
         </tr>
       </tbody>
     </table>
-    <h2>Custom Message for Task Area</h2>
+    <h2>Custom Message for Task</h2>
     <table>
       <thead>
         <tr>
           <th scope="col"></th>
-          <th scope="col">icon</th>
-          <th scope="col">text</th>
-          <th scope="col">room id</th>
+          <th scope="col">Icon</th>
+          <th scope="col">Message</th>
+          <th scope="col">Room ID</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <th scope="row">1</th>
           <td><input type="text" id="task_icon_1" size="5" /></td>
-          <td><textarea id="task_message_1" rows="1" cols="50"></textarea></td>
-          <td><textarea id="task_room_id_1" rows="1" cols="10"></textarea></td>
+          <td><textarea id="task_message_1" rows="2" cols="50"></textarea></td>
+          <td><textarea id="task_room_id_1" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">2</th>
           <td><input type="text" id="task_icon_2" size="5" /></td>
-          <td><textarea id="task_message_2" rows="1" cols="50"></textarea></td>
-          <td><textarea id="task_room_id_2" rows="1" cols="10"></textarea></td>
+          <td><textarea id="task_message_2" rows="2" cols="50"></textarea></td>
+          <td><textarea id="task_room_id_2" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">3</th>
           <td><input type="text" id="task_icon_3" size="5" /></td>
-          <td><textarea id="task_message_3" rows="1" cols="50"></textarea></td>
-          <td><textarea id="task_room_id_3" rows="1" cols="10"></textarea></td>
+          <td><textarea id="task_message_3" rows="2" cols="50"></textarea></td>
+          <td><textarea id="task_room_id_3" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">4</th>
           <td><input type="text" id="task_icon_4" size="5" /></td>
-          <td><textarea id="task_message_4" rows="1" cols="50"></textarea></td>
-          <td><textarea id="task_room_id_4" rows="1" cols="10"></textarea></td>
+          <td><textarea id="task_message_4" rows="2" cols="50"></textarea></td>
+          <td><textarea id="task_room_id_4" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">5</th>
           <td><input type="text" id="task_icon_5" size="5" /></td>
-          <td><textarea id="task_message_5" rows="1" cols="50"></textarea></td>
-          <td><textarea id="task_room_id_5" rows="1" cols="10"></textarea></td>
+          <td><textarea id="task_message_5" rows="2" cols="50"></textarea></td>
+          <td><textarea id="task_room_id_5" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">6</th>
           <td><input type="text" id="task_icon_6" size="5" /></td>
-          <td><textarea id="task_message_6" rows="1" cols="50"></textarea></td>
-          <td><textarea id="task_room_id_6" rows="1" cols="10"></textarea></td>
+          <td><textarea id="task_message_6" rows="2" cols="50"></textarea></td>
+          <td><textarea id="task_room_id_6" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">7</th>
           <td><input type="text" id="task_icon_7" size="5" /></td>
-          <td><textarea id="task_message_7" rows="1" cols="50"></textarea></td>
-          <td><textarea id="task_room_id_7" rows="1" cols="10"></textarea></td>
+          <td><textarea id="task_message_7" rows="2" cols="50"></textarea></td>
+          <td><textarea id="task_room_id_7" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">8</th>
           <td><input type="text" id="task_icon_8" size="5" /></td>
-          <td><textarea id="task_message_8" rows="1" cols="50"></textarea></td>
-          <td><textarea id="task_room_id_8" rows="1" cols="10"></textarea></td>
+          <td><textarea id="task_message_8" rows="2" cols="50"></textarea></td>
+          <td><textarea id="task_room_id_8" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">9</th>
           <td><input type="text" id="task_icon_9" size="5" /></td>
-          <td><textarea id="task_message_9" rows="1" cols="50"></textarea></td>
-          <td><textarea id="task_room_id_9" rows="1" cols="10"></textarea></td>
+          <td><textarea id="task_message_9" rows="2" cols="50"></textarea></td>
+          <td><textarea id="task_room_id_9" rows="2" cols="12"></textarea></td>
         </tr>
         <tr>
           <th scope="row">10</th>
           <td><input type="text" id="task_icon_10" size="5" /></td>
-          <td><textarea id="task_message_10" rows="1" cols="50"></textarea></td>
-          <td><textarea id="task_room_id_10" rows="1" cols="10"></textarea></td>
+          <td><textarea id="task_message_10" rows="2" cols="50"></textarea></td>
+          <td><textarea id="task_room_id_10" rows="2" cols="12"></textarea></td>
+        </tr>
+      </tbody>
+    </table>
+    <h2>Assign Members to Task</h2>
+    <table>
+      <thead>
+        <tr>
+          <th scope="col"></th>
+          <th scope="col">Icon</th>
+          <th scope="col">Label</th>
+          <th scope="col">Account ID</th>
+          <th scope="col">Room ID</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td><input type="text" id="assign_icon_1" size="5" /></td>
+          <td><input type="text" id="assign_label_1" size="50" /></td>
+          <td>
+            <textarea id="assign_member_1" rows="2" cols="12"></textarea>
+          </td>
+          <td>
+            <textarea id="assign_room_id_1" rows="2" cols="12"></textarea>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td><input type="text" id="assign_icon_2" size="5" /></td>
+          <td><input type="text" id="assign_label_2" size="50" /></td>
+          <td>
+            <textarea id="assign_member_2" rows="2" cols="12"></textarea>
+          </td>
+          <td>
+            <textarea id="assign_room_id_2" rows="2" cols="12"></textarea>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td><input type="text" id="assign_icon_3" size="5" /></td>
+          <td><input type="text" id="assign_label_3" size="50" /></td>
+          <td>
+            <textarea id="assign_member_3" rows="2" cols="12"></textarea>
+          </td>
+          <td>
+            <textarea id="assign_room_id_3" rows="2" cols="12"></textarea>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td><input type="text" id="assign_icon_4" size="5" /></td>
+          <td><input type="text" id="assign_label_4" size="50" /></td>
+          <td>
+            <textarea id="assign_member_4" rows="2" cols="12"></textarea>
+          </td>
+          <td>
+            <textarea id="assign_room_id_4" rows="2" cols="12"></textarea>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">5</th>
+          <td><input type="text" id="assign_icon_5" size="5" /></td>
+          <td><input type="text" id="assign_label_5" size="50" /></td>
+          <td>
+            <textarea id="assign_member_5" rows="2" cols="12"></textarea>
+          </td>
+          <td>
+            <textarea id="assign_room_id_5" rows="2" cols="12"></textarea>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">6</th>
+          <td><input type="text" id="assign_icon_6" size="5" /></td>
+          <td><input type="text" id="assign_label_6" size="50" /></td>
+          <td>
+            <textarea id="assign_member_6" rows="2" cols="12"></textarea>
+          </td>
+          <td>
+            <textarea id="assign_room_id_6" rows="2" cols="12"></textarea>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">7</th>
+          <td><input type="text" id="assign_icon_7" size="5" /></td>
+          <td><input type="text" id="assign_label_7" size="50" /></td>
+          <td>
+            <textarea id="assign_member_7" rows="2" cols="12"></textarea>
+          </td>
+          <td>
+            <textarea id="assign_room_id_7" rows="2" cols="12"></textarea>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">8</th>
+          <td><input type="text" id="assign_icon_8" size="5" /></td>
+          <td><input type="text" id="assign_label_8" size="50" /></td>
+          <td>
+            <textarea id="assign_member_8" rows="2" cols="12"></textarea>
+          </td>
+          <td>
+            <textarea id="assign_room_id_8" rows="2" cols="12"></textarea>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">9</th>
+          <td><input type="text" id="assign_icon_9" size="5" /></td>
+          <td><input type="text" id="assign_label_9" size="50" /></td>
+          <td>
+            <textarea id="assign_member_9" rows="2" cols="12"></textarea>
+          </td>
+          <td>
+            <textarea id="assign_room_id_9" rows="2" cols="12"></textarea>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">10</th>
+          <td><input type="text" id="assign_icon_10" size="5" /></td>
+          <td><input type="text" id="assign_label_10" size="50" /></td>
+          <td>
+            <textarea id="assign_member_10" rows="2" cols="12"></textarea>
+          </td>
+          <td>
+            <textarea id="assign_room_id_10" rows="2" cols="12"></textarea>
+          </td>
         </tr>
       </tbody>
     </table>
