--- a/setting/options.html
+++ b/setting/options.html
@@ -201,6 +201,66 @@
                 <td><input type="text" id="chat_icon_10" /></td>
                 <td><textarea id="chat_room_id_10" rows="2"></textarea></td>
               </tr>
+              <tr>
+                <th scope="row">11</th>
+                <td><textarea id="chat_message_11" rows="2"></textarea></td>
+                <td><input type="text" id="chat_icon_11" /></td>
+                <td><textarea id="chat_room_id_11" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">12</th>
+                <td><textarea id="chat_message_12" rows="2"></textarea></td>
+                <td><input type="text" id="chat_icon_12" /></td>
+                <td><textarea id="chat_room_id_12" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">13</th>
+                <td><textarea id="chat_message_13" rows="2"></textarea></td>
+                <td><input type="text" id="chat_icon_13" /></td>
+                <td><textarea id="chat_room_id_13" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">14</th>
+                <td><textarea id="chat_message_14" rows="2"></textarea></td>
+                <td><input type="text" id="chat_icon_14" /></td>
+                <td><textarea id="chat_room_id_14" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">15</th>
+                <td><textarea id="chat_message_15" rows="2"></textarea></td>
+                <td><input type="text" id="chat_icon_15" /></td>
+                <td><textarea id="chat_room_id_15" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">16</th>
+                <td><textarea id="chat_message_16" rows="2"></textarea></td>
+                <td><input type="text" id="chat_icon_16" /></td>
+                <td><textarea id="chat_room_id_16" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">17</th>
+                <td><textarea id="chat_message_17" rows="2"></textarea></td>
+                <td><input type="text" id="chat_icon_17" /></td>
+                <td><textarea id="chat_room_id_17" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">18</th>
+                <td><textarea id="chat_message_18" rows="2"></textarea></td>
+                <td><input type="text" id="chat_icon_18" /></td>
+                <td><textarea id="chat_room_id_18" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">19</th>
+                <td><textarea id="chat_message_19" rows="2"></textarea></td>
+                <td><input type="text" id="chat_icon_19" /></td>
+                <td><textarea id="chat_room_id_19" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">20</th>
+                <td><textarea id="chat_message_20" rows="2"></textarea></td>
+                <td><input type="text" id="chat_icon_20" /></td>
+                <td><textarea id="chat_room_id_20" rows="2"></textarea></td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -275,6 +335,66 @@
                 <td><textarea id="task_message_10" rows="2"></textarea></td>
                 <td><input type="text" id="task_icon_10" /></td>
                 <td><textarea id="task_room_id_10" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">11</th>
+                <td><textarea id="task_message_11" rows="2"></textarea></td>
+                <td><input type="text" id="task_icon_11" /></td>
+                <td><textarea id="task_room_id_11" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">12</th>
+                <td><textarea id="task_message_12" rows="2"></textarea></td>
+                <td><input type="text" id="task_icon_12" /></td>
+                <td><textarea id="task_room_id_12" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">13</th>
+                <td><textarea id="task_message_13" rows="2"></textarea></td>
+                <td><input type="text" id="task_icon_13" /></td>
+                <td><textarea id="task_room_id_13" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">14</th>
+                <td><textarea id="task_message_14" rows="2"></textarea></td>
+                <td><input type="text" id="task_icon_14" /></td>
+                <td><textarea id="task_room_id_14" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">15</th>
+                <td><textarea id="task_message_15" rows="2"></textarea></td>
+                <td><input type="text" id="task_icon_15" /></td>
+                <td><textarea id="task_room_id_15" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">16</th>
+                <td><textarea id="task_message_16" rows="2"></textarea></td>
+                <td><input type="text" id="task_icon_16" /></td>
+                <td><textarea id="task_room_id_16" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">17</th>
+                <td><textarea id="task_message_17" rows="2"></textarea></td>
+                <td><input type="text" id="task_icon_17" /></td>
+                <td><textarea id="task_room_id_17" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">18</th>
+                <td><textarea id="task_message_18" rows="2"></textarea></td>
+                <td><input type="text" id="task_icon_18" /></td>
+                <td><textarea id="task_room_id_18" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">19</th>
+                <td><textarea id="task_message_19" rows="2"></textarea></td>
+                <td><input type="text" id="task_icon_19" /></td>
+                <td><textarea id="task_room_id_19" rows="2"></textarea></td>
+              </tr>
+              <tr>
+                <th scope="row">20</th>
+                <td><textarea id="task_message_20" rows="2"></textarea></td>
+                <td><input type="text" id="task_icon_20" /></td>
+                <td><textarea id="task_room_id_20" rows="2"></textarea></td>
               </tr>
             </tbody>
           </table>
@@ -400,6 +520,116 @@
                 <td><input type="text" id="assign_icon_10" /></td>
                 <td>
                   <textarea id="assign_room_id_10" rows="2"></textarea>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">11</th>
+                <td>
+                  <textarea id="assign_member_11" rows="2"></textarea>
+                </td>
+                <td><input type="text" id="assign_label_11" /></td>
+                <td><input type="text" id="assign_icon_11" /></td>
+                <td>
+                  <textarea id="assign_room_id_11" rows="2"></textarea>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">12</th>
+                <td>
+                  <textarea id="assign_member_12" rows="2"></textarea>
+                </td>
+                <td><input type="text" id="assign_label_12" /></td>
+                <td><input type="text" id="assign_icon_12" /></td>
+                <td>
+                  <textarea id="assign_room_id_12" rows="2"></textarea>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">13</th>
+                <td>
+                  <textarea id="assign_member_13" rows="2"></textarea>
+                </td>
+                <td><input type="text" id="assign_label_13" /></td>
+                <td><input type="text" id="assign_icon_13" /></td>
+                <td>
+                  <textarea id="assign_room_id_13" rows="2"></textarea>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">14</th>
+                <td>
+                  <textarea id="assign_member_14" rows="2"></textarea>
+                </td>
+                <td><input type="text" id="assign_label_14" /></td>
+                <td><input type="text" id="assign_icon_14" /></td>
+                <td>
+                  <textarea id="assign_room_id_14" rows="2"></textarea>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">15</th>
+                <td>
+                  <textarea id="assign_member_15" rows="2"></textarea>
+                </td>
+                <td><input type="text" id="assign_label_15" /></td>
+                <td><input type="text" id="assign_icon_15" /></td>
+                <td>
+                  <textarea id="assign_room_id_15" rows="2"></textarea>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">16</th>
+                <td>
+                  <textarea id="assign_member_16" rows="2"></textarea>
+                </td>
+                <td><input type="text" id="assign_label_16" /></td>
+                <td><input type="text" id="assign_icon_16" /></td>
+                <td>
+                  <textarea id="assign_room_id_16" rows="2"></textarea>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">17</th>
+                <td>
+                  <textarea id="assign_member_17" rows="2"></textarea>
+                </td>
+                <td><input type="text" id="assign_label_17" /></td>
+                <td><input type="text" id="assign_icon_17" /></td>
+                <td>
+                  <textarea id="assign_room_id_17" rows="2"></textarea>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">18</th>
+                <td>
+                  <textarea id="assign_member_18" rows="2"></textarea>
+                </td>
+                <td><input type="text" id="assign_label_18" /></td>
+                <td><input type="text" id="assign_icon_18" /></td>
+                <td>
+                  <textarea id="assign_room_id_18" rows="2"></textarea>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">19</th>
+                <td>
+                  <textarea id="assign_member_19" rows="2"></textarea>
+                </td>
+                <td><input type="text" id="assign_label_19" /></td>
+                <td><input type="text" id="assign_icon_19" /></td>
+                <td>
+                  <textarea id="assign_room_id_19" rows="2"></textarea>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">20</th>
+                <td>
+                  <textarea id="assign_member_20" rows="2"></textarea>
+                </td>
+                <td><input type="text" id="assign_label_20" /></td>
+                <td><input type="text" id="assign_icon_20" /></td>
+                <td>
+                  <textarea id="assign_room_id_20" rows="2"></textarea>
                 </td>
               </tr>
             </tbody>
