💄 change setting json format

--- a/setting/options.html
+++ b/setting/options.html
@@ -21,8 +21,8 @@
             <thead>
               <tr>
                 <th scope="col"></th>
-                <th scope="col">Label</th>
-                <th scope="col">Message</th>
+                <th scope="col">* Label</th>
+                <th scope="col">* Message</th>
               </tr>
             </thead>
             <tbody>
@@ -135,7 +135,7 @@
             <thead>
               <tr>
                 <th scope="col"></th>
-                <th scope="col">Message</th>
+                <th scope="col">* Message</th>
                 <th scope="col">Icon</th>
                 <th scope="col">Room ID</th>
               </tr>
@@ -270,7 +270,7 @@
             <thead>
               <tr>
                 <th scope="col"></th>
-                <th scope="col">Message</th>
+                <th scope="col">* Message</th>
                 <th scope="col">Icon</th>
                 <th scope="col">Room ID</th>
               </tr>
@@ -405,8 +405,8 @@
             <thead>
               <tr>
                 <th scope="col"></th>
-                <th scope="col">Account ID</th>
-                <th scope="col">Label</th>
+                <th scope="col">* Account ID</th>
+                <th scope="col">* Label</th>
                 <th scope="col">Icon</th>
                 <th scope="col">Room ID</th>
               </tr>
